# midi_test

./: .gitignore  .gitmodules  CMakeLists.txt  midi_test.c  readme.md  todo
_pcb/libs/Potentiometer.pretty/: Linear_Potentiometer.kicad_mod
_pcb/main_pcb/main_pcb/: ADC.kicad_sch  Buttons.kicad_sch  RotarySW.kicad_sch  WS2812.kicad_sch  fp-lib-table  main_pcb.kicad_pcb  main_pcb.kicad_prl  main_pcb.kicad_pro  main_pcb.kicad_sch  sym-lib-table
_python_usb_midi_debugin/: input_to_pc.py  output_to_rp2040.py  todo  ui.py
_sim/: rotSW_sim.asc
src/: main.c  usb_descriptors.c
src/IOexpander/: IOexpander.c  IOexpander.h  IOexpander_handler.c  IOexpander_handler.h
src/Inputs/ADC/: adc_handler.c  adc_handler.h
src/Inputs/Button/: button.c  button.h  button_todo
src/Inputs/Poti/: adc_handler.h
src/Inputs/RotarySW/: rotarty_switch.c  rotarty_switch.h
src/Outputs/LED/Digital/: led_handler.c  led_setup.c  led_setup.h
src/Outputs/WS2812/: ws2812.c  ws2812.h  ws2812_handler.c  ws2812_handler.h
src/irq/: main_irq_callback.c  main_irq_callback.h
src/usb_handler/: midi_handler.c  midi_handler.h  tud_handler.c  tud_handler.h
